# netsim

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile
crates/netsim-core/: Cargo.toml
crates/netsim-core/src/: engine.rs  error.rs  flow.rs  lib.rs  matcher.rs  session_engine.rs  trace.rs
crates/netsim-core/src/model/: bridge_fdb.rs  conntrack.rs  endpoint.rs  interface.rs  mod.rs  nat.rs  neighbor.rs  netfilter.rs  packet.rs  policy_routing.rs  routing.rs  scenario.rs  session.rs  sysctl.rs  xdp.rs
crates/netsim-core/src/pipeline/: chain_eval.rs  context.rs  forward.rs  local_input.rs  mod.rs  nat.rs  postrouting.rs  prerouting.rs  routing.rs  tc_ingress.rs  xdp.rs
crates/netsim-core/src/pipeline/stages/: arp.rs  bridge.rs  interface_check.rs  l2_rewrite.rs  mod.rs  mtu_check.rs  sysctl_checks.rs
crates/netsim-core/tests/: integration_test.rs  session_test.rs
crates/netsim-parser/: Cargo.toml
crates/netsim-parser/src/: error.rs  ip_addr.rs  ip_route.rs  ip_rule.rs  iptables_save.rs  lib.rs  nft_list.rs  validation.rs
crates/netsim-server/: Cargo.toml
crates/netsim-server/samples/: sample-basic-forward.json  sample-bridge-forward.json  sample-dnat-port-forward.json  sample-firewall-drop.json  sample-icmp-ping.json  sample-local-delivery.json  sample-mtu-exceeded.json  sample-policy-routing.json  sample-snat-masquerade.json  sample-tproxy.json  sample-ttl-exceeded.json  sample-xdp-filter.json
crates/netsim-server/src/: app.rs  error.rs  main.rs  samples.rs  state.rs  storage.rs
crates/netsim-server/src/api/: health.rs  import.rs  mod.rs  project.rs  simulation.rs
docs/: API.md  DESIGN_BACKEND.md  DESIGN_FRONTEND.md  DEV.md  ISSUE.md  NETWORK_STACK.md  PROCESS.md  STYLE.md  TEST.md
docs/nstack/: 01-interface-check.md  02-xdp.md  03-bridge.md  04-arp.md  05-tc-ingress.md  06-prerouting.md  07-routing.md  08-local-input.md  09-forward.md  10-postrouting.md  11-mtu-check.md  12-output.md  README.md  model-conntrack.md  model-endpoint.md  model-interface.md  (+4 more)
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
spec/: REQUIREMENT.md  TECH.md
(+36 files in other folders)
