[package]
name = "netsim-parser"
version.workspace = true
edition.workspace = true

[dependencies]
netsim-core = { path = "../netsim-core" }
nom = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ipnet = { workspace = true }
regex = "1"
