[package]
name = "netsim-server"
version.workspace = true
edition.workspace = true

[dependencies]
netsim-core = { path = "../netsim-core" }
netsim-parser = { path = "../netsim-parser" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
